--- a/src/lab3/src/notebooks/spark-intro_MGMA.ipynb
+++ b/src/lab3/src/notebooks/spark-intro_MGMA.ipynb
@@ -330,7 +330,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from os.path import join"
+    "from os.path import join, exists, isfile, isdir, abspath, dirname, basename, realpath\n",
+    "from os import makedirs, listdir, pardir, getcwd"
    ]
   },
   {
