--- a/src/lab3/src/notebooks/spark-intro_MGMA.ipynb
+++ b/src/lab3/src/notebooks/spark-intro_MGMA.ipynb
@@ -446,9 +446,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done\n"
+     ]
+    }
+   ],
    "source": [
     "r1 = sc.parallelize([1, 2, 3, 4])\n",
     "r2 = sc.parallelize([3, 4, 5, 6, 7])\n",
@@ -481,9 +489,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elements of RDD square  [1, 4, 9, 16]\n",
+      "Elements of the RDD half  [1.5, 2.0, 2.5, 3.0, 3.5]\n"
+     ]
+    }
+   ],
    "source": [
     "square = r1.map(lambda x : x*x)\n",
     "half = r2.map(lambda x: x/2)\n",
