Work in progress

--- a/src/lab3/src/notebooks/spark-intro_MGMA.ipynb
+++ b/src/lab3/src/notebooks/spark-intro_MGMA.ipynb
@@ -543,9 +543,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elements of RDD squares  [[1, 1], [2, 4], [3, 9], [4, 16]]\n"
+     ]
+    }
+   ],
    "source": [
     "squares = r1.map(lambda x : [x, x*x])\n",
     "print(\"Elements of RDD squares \", squares.collect())"
