--- a/src/lab3/src/notebooks/spark-intro_MGMA.ipynb
+++ b/src/lab3/src/notebooks/spark-intro_MGMA.ipynb
@@ -585,9 +585,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elements of RDD squares  [1, 1, 2, 4, 3, 9, 4, 16]\n"
+     ]
+    }
+   ],
    "source": [
     "squares = r1.flatMap(lambda x : [x, x*x])\n",
     "print(\"Elements of RDD squares \", squares.collect())"
