--- a/src/lab3/src/notebooks/spark-intro_MGMA.ipynb
+++ b/src/lab3/src/notebooks/spark-intro_MGMA.ipynb
@@ -621,9 +621,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elements of RDD r1  [1, 2, 3, 4]\n",
+      "Elements of RDD r2  [3, 4, 5, 6, 7]\n",
+      "Elements of RDD union  [1, 2, 3, 4, 3, 4, 5, 6, 7]\n",
+      "Elements of RDD intesection  [3, 4]\n",
+      "Elements of RDD subtract  [1, 2]\n",
+      "Elements of RDD cartesian  [(1, 3), (1, 4), (1, 5), (1, 6), (1, 7), (2, 3), (2, 4), (2, 5), (2, 6), (2, 7), (3, 3), (3, 4), (3, 5), (3, 6), (3, 7), (4, 3), (4, 4), (4, 5), (4, 6), (4, 7)]\n"
+     ]
+    }
+   ],
    "source": [
     "union = r1.union(r2)\n",
     "intersection = r1.intersection(r2)\n",
