--- a/src/lab3/src/notebooks/spark-intro_MGMA.ipynb
+++ b/src/lab3/src/notebooks/spark-intro_MGMA.ipynb
@@ -673,9 +673,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elements of the RDD union:  [1, 2, 3, 4, 3, 4, 5, 6, 7]\n",
+      "Elements of the RDD union (with no duplicates):  [1, 2, 3, 4, 5, 6, 7]\n"
+     ]
+    }
+   ],
    "source": [
     "nodup = union.distinct()\n",
     "print(\"Elements of the RDD union: \", union.collect())\n",
@@ -732,9 +741,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elements of the RDD r1  [1, 2, 3, 4]\n",
+      "Sum of the elements of the RDD r1:  10\n"
+     ]
+    }
+   ],
    "source": [
     "'''\n",
     "The function passed to the reduce MUST take in two arguments \n",
@@ -742,7 +760,7 @@
     "'''\n",
     "sum = r1.reduce(lambda x, y : x + y)\n",
     "print(\"Elements of the RDD r1 \", r1.collect())\n",
-    "print(\"Sum of the elements of the RDD r1: \", sum)\n"
+    "print(\"Sum of the elements of the RDD r1: \", sum)"
    ]
   },
   {
@@ -769,9 +787,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elements of the RDD union  [1, 2, 3, 4, 3, 4, 5, 6, 7]\n",
+      "Occurrences of each element in the RDD union:\n",
+      "1  -->  1  occurrences\n",
+      "2  -->  1  occurrences\n",
+      "3  -->  2  occurrences\n",
+      "4  -->  2  occurrences\n",
+      "5  -->  1  occurrences\n",
+      "6  -->  1  occurrences\n",
+      "7  -->  1  occurrences\n"
+     ]
+    }
+   ],
    "source": [
     "occurrences = union.countByValue()\n",
     "print(\"Elements of the RDD union \", union.collect())\n",
@@ -867,7 +901,7 @@
     "\n",
     "\n",
     "# Reads the novel into a RDD\n",
-    "mobydick = sc.textFile('./data/moby-dick.txt')\n",
+    "mobydick = sc.textFile(join(data_dir, \"moby-dick.txt\"))\n",
     "\n",
     "words = preprocess(mobydick)\n",
     "\n",
