--- a/src/lab3/src/notebooks/spark-intro_MGMA.ipynb
+++ b/src/lab3/src/notebooks/spark-intro_MGMA.ipynb
@@ -891,7 +891,23 @@
     "    **************************************************\n",
     "    COMPLETE STEP 2 THROUGH 4\n",
     "    **************************************************\n",
+    "    Step 2.\n",
+    "    Transform the RDD into a new RDD where each element is a list of words.\n",
     "    '''\n",
+    "    text = text.map(lambda line: line.split())\n",
+    "\n",
+    "    '''\n",
+    "    Step 3.\n",
+    "    Transform the RDD into a new RDD where each element is a word. i.e: filter out the words with length < 0\n",
+    "    '''\n",
+    "    text = text.flatMap(lambda line: line)\n",
+    "    text = text.filter(lambda word: len(word) > 0)\n",
+    "\n",
+    "    '''\n",
+    "    Step 4.\n",
+    "    Transform the RDD into a new RDD where each element is a word in lower case.\n",
+    "    '''\n",
+    "    words = text.map(lambda word: word.lower())\n",
     "    \n",
     "    '''\n",
     "    Step 5.\n",
