--- a/src/lab3/src/notebooks/spark-intro_MGMA.ipynb
+++ b/src/lab3/src/notebooks/spark-intro_MGMA.ipynb
@@ -867,9 +867,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of words  208240\n",
+      "Top-100 most frequent words\n",
+      "the ---> 14065\n",
+      "of ---> 6440\n",
+      "and ---> 6257\n",
+      "a ---> 4535\n",
+      "to ---> 4491\n",
+      "in ---> 4050\n",
+      "that ---> 2900\n",
+      "his ---> 2485\n",
+      "it ---> 2343\n",
+      "i ---> 1930\n",
+      "but ---> 1763\n",
+      "he ---> 1729\n",
+      "as ---> 1698\n",
+      "with ---> 1690\n",
+      "is ---> 1672\n",
+      "was ---> 1618\n",
+      "for ---> 1574\n",
+      "all ---> 1464\n",
+      "this ---> 1351\n",
+      "at ---> 1295\n",
+      "by ---> 1169\n",
+      "not ---> 1121\n",
+      "from ---> 1071\n",
+      "him ---> 1035\n",
+      "so ---> 1030\n",
+      "on ---> 1028\n",
+      "be ---> 1024\n",
+      "whale ---> 891\n",
+      "one ---> 875\n",
+      "you ---> 851\n",
+      "had ---> 765\n",
+      "now ---> 759\n",
+      "there ---> 755\n",
+      "have ---> 751\n",
+      "or ---> 686\n",
+      "were ---> 674\n",
+      "they ---> 639\n",
+      "which ---> 617\n",
+      "then ---> 614\n",
+      "me ---> 606\n",
+      "some ---> 604\n",
+      "their ---> 603\n",
+      "when ---> 591\n",
+      "are ---> 584\n",
+      "my ---> 584\n",
+      "an ---> 583\n",
+      "like ---> 567\n",
+      "no ---> 566\n",
+      "upon ---> 560\n",
+      "what ---> 537\n",
+      "into ---> 517\n",
+      "out ---> 509\n",
+      "more ---> 499\n",
+      "up ---> 496\n",
+      "if ---> 469\n",
+      "its ---> 457\n",
+      "them ---> 450\n",
+      "old ---> 436\n",
+      "man ---> 433\n",
+      "we ---> 426\n",
+      "would ---> 421\n",
+      "ahab ---> 417\n",
+      "ye ---> 416\n",
+      "been ---> 408\n",
+      "over ---> 397\n",
+      "other ---> 393\n",
+      "these ---> 387\n",
+      "ship ---> 378\n",
+      "will ---> 377\n",
+      "only ---> 369\n",
+      "such ---> 364\n",
+      "whales ---> 363\n",
+      "sea ---> 363\n",
+      "though ---> 362\n",
+      "down ---> 358\n",
+      "yet ---> 339\n",
+      "who ---> 330\n",
+      "her ---> 321\n",
+      "time ---> 321\n",
+      "any ---> 320\n",
+      "very ---> 317\n",
+      "long ---> 313\n",
+      "still ---> 307\n",
+      "about ---> 305\n",
+      "those ---> 302\n",
+      "than ---> 300\n",
+      "do ---> 297\n",
+      "captain ---> 292\n",
+      "before ---> 291\n",
+      "great ---> 289\n",
+      "said ---> 288\n",
+      "has ---> 287\n",
+      "here ---> 284\n",
+      "seemed ---> 280\n",
+      "must ---> 279\n",
+      "two ---> 278\n",
+      "last ---> 273\n",
+      "most ---> 273\n",
+      "head ---> 263\n",
+      "thou ---> 262\n"
+     ]
+    }
+   ],
    "source": [
     "import operator;\n",
     "import re;\n",
@@ -941,8 +1050,7 @@
     "    i += 1\n",
     "    if i > 100:\n",
     "        break\n",
-    "    print(w,\"--->\",f)\n",
-    "    "
+    "    print(w,\"--->\",f)"
    ]
   },
   {
