Work in progress

--- a/src/lab3/src/notebooks/spark-intro_MGMA.ipynb
+++ b/src/lab3/src/notebooks/spark-intro_MGMA.ipynb
@@ -1149,7 +1149,7 @@
     "\n",
     "\n",
     "# Load the stopwords to an RDD\n",
-    "stopwords = sc.textFile(\"./data/stopwords.txt\")\n",
+    "stopwords = sc.textFile(join(data_dir, \"stopwords.txt\"))\n",
     "words = preprocess(mobydick, stopwords)\n",
     "print(\"Number of words after stopword removal \", words.count())\n",
     "\n",
