--- a/src/lab3/src/notebooks/spark-intro_MGMA.ipynb
+++ b/src/lab3/src/notebooks/spark-intro_MGMA.ipynb
@@ -1091,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {
     "autoscroll": "json-false",
     "ein.tags": [
@@ -1132,7 +1132,7 @@
       "\u001b[0;31mRuntimeError\u001b[0m: It appears that you are attempting to broadcast an RDD or reference an RDD from an action or transformation. RDD transformations and actions can only be invoked by the driver, not inside of other transformations; for example, rdd1.map(lambda x: rdd2.values.count() * x) is invalid because the values transformation and count action cannot be performed inside of the rdd1.map transformation. For more information, see SPARK-5063.",
       "\nDuring handling of the above exception, another exception occurred:\n",
       "\u001b[0;31mPicklingError\u001b[0m                             Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [23], line 50\u001b[0m\n\u001b[1;32m     48\u001b[0m stopwords \u001b[39m=\u001b[39m sc\u001b[39m.\u001b[39mtextFile(join(data_dir, \u001b[39m\"\u001b[39m\u001b[39mstopwords.txt\u001b[39m\u001b[39m\"\u001b[39m))\n\u001b[1;32m     49\u001b[0m words \u001b[39m=\u001b[39m preprocess(mobydick, stopwords)\n\u001b[0;32m---> 50\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mNumber of words after stopword removal \u001b[39m\u001b[39m\"\u001b[39m, words\u001b[39m.\u001b[39;49mcount())\n\u001b[1;32m     52\u001b[0m \u001b[39m# Count the number of occurrences as before.\u001b[39;00m\n\u001b[1;32m     53\u001b[0m occurrences \u001b[39m=\u001b[39m \u001b[39msorted\u001b[39m(words\u001b[39m.\u001b[39mcountByValue()\u001b[39m.\u001b[39mitems(), key\u001b[39m=\u001b[39moperator\u001b[39m.\u001b[39mitemgetter(\u001b[39m1\u001b[39m))\n",
+      "Cell \u001b[0;32mIn [27], line 49\u001b[0m\n\u001b[1;32m     47\u001b[0m stopwords \u001b[39m=\u001b[39m sc\u001b[39m.\u001b[39mtextFile(join(data_dir, \u001b[39m\"\u001b[39m\u001b[39mstopwords.txt\u001b[39m\u001b[39m\"\u001b[39m))\n\u001b[1;32m     48\u001b[0m words \u001b[39m=\u001b[39m preprocess(mobydick, stopwords)\n\u001b[0;32m---> 49\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mNumber of words after stopword removal \u001b[39m\u001b[39m\"\u001b[39m, words\u001b[39m.\u001b[39;49mcount())\n\u001b[1;32m     51\u001b[0m \u001b[39m# # Count the number of occurrences as before.\u001b[39;00m\n\u001b[1;32m     52\u001b[0m \u001b[39m# occurrences = sorted(words.countByValue().items(), key=operator.itemgetter(1))\u001b[39;00m\n\u001b[1;32m     53\u001b[0m \u001b[39m# # Reverse the order\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     60\u001b[0m \u001b[39m#         break\u001b[39;00m\n\u001b[1;32m     61\u001b[0m \u001b[39m#     print(w, \", \", f)\u001b[39;00m\n",
       "File \u001b[0;32m/opt/homebrew/Caskroom/mambaforge/base/envs/mgma/lib/python3.9/site-packages/pyspark/rdd.py:1521\u001b[0m, in \u001b[0;36mRDD.count\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1512\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcount\u001b[39m(\u001b[39mself\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mint\u001b[39m:\n\u001b[1;32m   1513\u001b[0m     \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m   1514\u001b[0m \u001b[39m    Return the number of elements in this RDD.\u001b[39;00m\n\u001b[1;32m   1515\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1519\u001b[0m \u001b[39m    3\u001b[39;00m\n\u001b[1;32m   1520\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m-> 1521\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mmapPartitions(\u001b[39mlambda\u001b[39;49;00m i: [\u001b[39msum\u001b[39;49m(\u001b[39m1\u001b[39;49m \u001b[39mfor\u001b[39;49;00m _ \u001b[39min\u001b[39;49;00m i)])\u001b[39m.\u001b[39;49msum()\n",
       "File \u001b[0;32m/opt/homebrew/Caskroom/mambaforge/base/envs/mgma/lib/python3.9/site-packages/pyspark/rdd.py:1508\u001b[0m, in \u001b[0;36mRDD.sum\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1499\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39msum\u001b[39m(\u001b[39mself\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mRDD[NumberOrArray]\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mNumberOrArray\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[1;32m   1500\u001b[0m     \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m   1501\u001b[0m \u001b[39m    Add up the elements in this RDD.\u001b[39;00m\n\u001b[1;32m   1502\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1506\u001b[0m \u001b[39m    6.0\u001b[39;00m\n\u001b[1;32m   1507\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m-> 1508\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mmapPartitions(\u001b[39mlambda\u001b[39;49;00m x: [\u001b[39msum\u001b[39;49m(x)])\u001b[39m.\u001b[39;49mfold(  \u001b[39m# type: ignore[return-value]\u001b[39;49;00m\n\u001b[1;32m   1509\u001b[0m         \u001b[39m0\u001b[39;49m, operator\u001b[39m.\u001b[39;49madd\n\u001b[1;32m   1510\u001b[0m     )\n",
       "File \u001b[0;32m/opt/homebrew/Caskroom/mambaforge/base/envs/mgma/lib/python3.9/site-packages/pyspark/rdd.py:1336\u001b[0m, in \u001b[0;36mRDD.fold\u001b[0;34m(self, zeroValue, op)\u001b[0m\n\u001b[1;32m   1331\u001b[0m     \u001b[39myield\u001b[39;00m acc\n\u001b[1;32m   1333\u001b[0m \u001b[39m# collecting result of mapPartitions here ensures that the copy of\u001b[39;00m\n\u001b[1;32m   1334\u001b[0m \u001b[39m# zeroValue provided to each partition is unique from the one provided\u001b[39;00m\n\u001b[1;32m   1335\u001b[0m \u001b[39m# to the final reduce call\u001b[39;00m\n\u001b[0;32m-> 1336\u001b[0m vals \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mmapPartitions(func)\u001b[39m.\u001b[39;49mcollect()\n\u001b[1;32m   1337\u001b[0m \u001b[39mreturn\u001b[39;00m reduce(op, vals, zeroValue)\n",
@@ -1191,23 +1191,22 @@
     "    # Returns the words\n",
     "    return words\n",
     "\n",
-    "\n",
     "# Load the stopwords to an RDD\n",
     "stopwords = sc.textFile(join(data_dir, \"stopwords.txt\"))\n",
     "words = preprocess(mobydick, stopwords)\n",
     "print(\"Number of words after stopword removal \", words.count())\n",
     "\n",
-    "# Count the number of occurrences as before.\n",
-    "occurrences = sorted(words.countByValue().items(), key=operator.itemgetter(1))\n",
-    "# Reverse the order\n",
-    "occurrences.reverse()\n",
-    "print(\"Top-100 most frequent words\")\n",
-    "i = 0\n",
-    "for (w, f) in occurrences:\n",
-    "    i += 1\n",
-    "    if i > 100:\n",
-    "        break\n",
-    "    print(w, \", \", f)"
+    "# # Count the number of occurrences as before.\n",
+    "# occurrences = sorted(words.countByValue().items(), key=operator.itemgetter(1))\n",
+    "# # Reverse the order\n",
+    "# occurrences.reverse()\n",
+    "# print(\"Top-100 most frequent words\")\n",
+    "# i = 0\n",
+    "# for (w, f) in occurrences:\n",
+    "#     i += 1\n",
+    "#     if i > 100:\n",
+    "#         break\n",
+    "#     print(w, \", \", f)"
    ]
   },
   {
