--- a/src/lab3/src/notebooks/spark-intro_MGMA.ipynb
+++ b/src/lab3/src/notebooks/spark-intro_MGMA.ipynb
@@ -1181,6 +1181,7 @@
     "    '''\n",
     "    Step 5 Remove stop words.\n",
     "    '''\n",
+    "    stopwords = sc.broadcast(stopwords)\n",
     "    words = words.filter(lambda word: word not in stopwords)\n",
     "    '''\n",
     "    **************************************************\n",
