--- a/src/lab3/src/notebooks/spark-intro_MGMA.ipynb
+++ b/src/lab3/src/notebooks/spark-intro_MGMA.ipynb
@@ -1182,7 +1182,7 @@
     "    Step 5 Remove stop words.\n",
     "    '''\n",
     "    stopwords = sc.broadcast(stopwords)\n",
-    "    words = words.filter(lambda word: word not in stopwords)\n",
+    "    words = words.filter(lambda word: word not in stopwords.value)\n",
     "    '''\n",
     "    **************************************************\n",
     "    COMPLETE STEP 5\n",
