--- a/src/lab4/src/notebooks/spark-PageRank.ipynb
+++ b/src/lab4/src/notebooks/spark-PageRank.ipynb
@@ -300,11 +300,11 @@
     "    \n",
     "    # 1. Put the two RDDs A and B together. Use the transformation union. Remember that a transformation \n",
     "    # always returns a new RDD with the result of the transformation.\n",
-    "    C = \n",
+    "    C = A.union(B)\n",
     "    \n",
     "    #2. Transforms the RDD C into one where the values having the same key (i.e., same row and column) \n",
     "    # are summed together. Which transformation are you going to use on C?\n",
-    "    C =\n",
+    "    C = C.reduceByKey(lambda x, y: x + y)\n",
     "    # We return the RDD containing the sum of the two input matrices\n",
     "    return C\n",
     "\n",
