--- a/src/lab4/src/notebooks/spark-PageRank.ipynb
+++ b/src/lab4/src/notebooks/spark-PageRank.ipynb
@@ -36,27 +36,18 @@
    "source": [
     "from os import getcwd\n",
     "from os.path import join, isfile, dirname, abspath, pardir, exists\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "import test_spark"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PosixPath('/Users/mohammadzainabbas/Masters/CS/Massive-Graph-Management-And-Analytics/MGMA-Lab/src/lab4')"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "Path(getcwd()).resolve().parents[1]"
+    "parent_dir = Path(test_spark.__file__).resolve().parents[2]\n",
+    "data_dir = join(parent_dir, \"data\")"
    ]
   },
   {
