Work in progress

--- a/src/lab4/src/notebooks/spark-PageRank.ipynb
+++ b/src/lab4/src/notebooks/spark-PageRank.ipynb
@@ -323,11 +323,11 @@
     "    ################## END OF MODIFICATIONS ##################\n",
     "\n",
     "# Load matrix A from file and print it.\n",
-    "A = loadMatrix(\"./data/matrix-a.txt\")\n",
+    "A = loadMatrix(join(data_dir, \"matrix-a.txt\"))\n",
     "nice(\"A\", A)\n",
     "\n",
     "# Load matrix B from file and print it.\n",
-    "B = loadMatrix(\"./data/matrix-b.txt\")\n",
+    "B = loadMatrix(join(data_dir, \"matrix-b.txt\"))\n",
     "nice(\"B\", B)\n",
     "\n",
     "# Compute A+B and print it\n",
