--- a/src/lab4/src/notebooks/spark-PageRank.ipynb
+++ b/src/lab4/src/notebooks/spark-PageRank.ipynb
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,37 +294,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Matrix  A\n",
+      "Matrix: 'A'\n",
       "        1.00        2.00        4.00\n",
       "        2.00        3.00       10.00\n",
       "       12.00       15.00      150.00\n",
-      "Matrix  B\n",
+      "Matrix: 'B'\n",
       "        4.00        2.00        2.00      324.00       23.00\n",
       "        1.00        3.00        3.00      333.00      423.00\n",
       "       23.00       34.00       12.00       12.00        0.00\n",
-      "Matrix  C - after union\n",
+      "Matrix: 'C - after union'\n",
       "        1.00        4.00        2.00        2.00        2.00        4.00      324.00       23.00\n",
       "        1.00        2.00        3.00        3.00        3.00       10.00      333.00      423.00\n",
       "       12.00       23.00       15.00       34.00       12.00      150.00       12.00        0.00\n",
-      "Matrix  C - reduceByKey\n",
+      "Matrix: 'C - reduceByKey'\n",
       "        5.00        4.00        6.00      324.00       23.00\n",
       "        3.00        6.00       13.00      333.00      423.00\n",
       "       35.00       49.00      162.00       12.00        0.00\n",
-      "Matrix  C\n",
+      "Matrix: 'C'\n",
       "        5.00        4.00        6.00      324.00       23.00\n",
       "        3.00        6.00       13.00      333.00      423.00\n",
       "       35.00       49.00      162.00       12.00        0.00\n"
