--- a/src/lab4/src/notebooks/spark-PageRank.ipynb
+++ b/src/lab4/src/notebooks/spark-PageRank.ipynb
@@ -420,7 +420,7 @@
     "    \n",
     "    # Apply a transformation on M, so each element of the matrix M is multiplied by c\n",
     "    # Which transformation are you going to use?\n",
-    "    R = \n",
+    "    R = M.map(lambda x: (x[0], x[1] * c))\n",
     "    \n",
     "    return R\n",
     "    ################## END MODIFICATION ##################\n",
