--- a/src/lab4/src/notebooks/spark-PageRank.ipynb
+++ b/src/lab4/src/notebooks/spark-PageRank.ipynb
@@ -405,9 +405,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix: 'A'\n",
+      "        1.00        2.00        4.00\n",
+      "        2.00        3.00       10.00\n",
+      "       12.00       15.00      150.00\n",
+      "Matrix: '2*A'\n",
+      "        2.00        4.00        8.00\n",
+      "        4.00        6.00       20.00\n",
+      "       24.00       30.00      300.00\n"
+     ]
+    }
+   ],
    "source": [
     "'''\n",
     "Computes the scalar multiplication.\n",
