--- a/src/lab4/src/notebooks/spark-PageRank.ipynb
+++ b/src/lab4/src/notebooks/spark-PageRank.ipynb
@@ -454,6 +454,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -465,6 +466,8 @@
     "We want to implement a function $multiply()$ to obtain the matrix $A \\times B$.\n",
     "</font>\n",
     "</p>\n",
+    "\n",
+    "$A$: an RDD containing the first matrix.\n",
     "\n",
     "<p>\n",
     "<font size=\"3\">\n",
