--- a/src/lab4/src/notebooks/spark-PageRank.ipynb
+++ b/src/lab4/src/notebooks/spark-PageRank.ipynb
@@ -465,73 +465,40 @@
     "\n",
     "The function $multiply()$ takes in:\n",
     "\n",
-    "<ul>\n",
-    "<li> $A$: an RDD containing the first matrix.\n",
-    "<li> $B$: an RDD containing the second matrix.\n",
-    "</ul>\n",
+    "- $A$: an RDD containing the first matrix.\n",
+    "- $B$: an RDD containing the second matrix.\n",
+    "\n",
     "The function $multiply$ returns an RDD containing the matrix obtained by multiplying the first and the second matrix.\n",
     "The multiplication can only be computed if the number of columns of $A$ equals the number of rows of $B$.\n",
-    "</font>\n",
-    "</p>\n",
     "\n",
-    "\n",
-    "<p>\n",
-    "<font size=\"3\">\n",
     "Let $A$ be an $n \\times m$ matrix and $B$ an $m \\times p$ matrix.\n",
     "The matrix $C = A \\times B$ is a $n \\times p$ matrix, where each element $c_{i, k}$ is computed as \n",
     "follows:\n",
-    "<center>\n",
-    "  $c_{i, k} = \\sum\\limits_{j=0}^{m-1} a_{i, j} \\cdot b_{j, k} \\quad\\quad (1)$ \n",
-    "</center>\n",
-    "</font>\n",
-    "</p>\n",
     "\n",
+    "$c_{i, k} = \\sum\\limits_{j=0}^{m-1} a_{i, j} \\cdot b_{j, k} \\quad\\quad (1)$ \n",
     "\n",
-    "<p>\n",
-    "<font size=\"3\">\n",
     "One possible implementation of this function is based on a MapReduce schema.\n",
     "Remember that in a MapReduce schema, the idea is to group elements by a key and apply a function to the elements \n",
     "that share the same key.\n",
     "As you can see, for a given $(i, k)$, the element of $A$ that is in the j-th column is multiplied by the value of $B$ that is in the j-th row, for any column $j$.\n",
     "Therefore, we can change the representation of $A$ and $B$ so that their elements are indexed by using $j$ as the key.\n",
-    "</font>\n",
-    "</p>\n",
     "\n",
-    "<p>\n",
-    "<font size=\"3\">\n",
     "More specifically, we can represent the matrix $A$ as follows:\n",
-    "<center>    \n",
-    "    $(j, (0, i, a_{i, j})) \\quad 0 \\leq i \\leq n-1 \\quad 0 \\leq j \\leq m-1  \\quad\\quad (2)$\n",
-    "</center>    \n",
+    "\n",
+    "$(j, (0, i, a_{i, j})) \\quad 0 \\leq i \\leq n-1 \\quad 0 \\leq j \\leq m-1  \\quad\\quad (2)$\n",
+    "\n",
     "where the value $0$ in the triple $(0, i, a_{i, j})$ means that the element $a_{i, j}$ comes from the matrix $A$.\n",
-    "</font>\n",
-    "</p>\n",
     "\n",
-    "\n",
-    "<p>\n",
-    "<font size=\"3\">\n",
     "Similarly, we can represent the matrix $B$ as follows:\n",
-    "<center>    \n",
-    "    $(j, (1, k, b_{j, k})) \\quad 0 \\leq j \\leq m-1 \\quad 0 \\leq k \\leq p-1 \\quad\\quad (3) $\n",
-    "</center>    \n",
-    "where the value $1$ in the triple $(1, k, b_{j, k})$ means that the element $b_{j, k}$ comes from the matrix $B$.\n",
-    "</font>\n",
-    "</p>\n",
     "\n",
-    "<p>\n",
-    "<font size=\"3\">\n",
+    "$(j, (1, k, b_{j, k})) \\quad 0 \\leq j \\leq m-1 \\quad 0 \\leq k \\leq p-1 \\quad\\quad (3) $\n",
+    "\n",
+    "where the value $1$ in the triple $(1, k, b_{j, k})$ means that the element $b_{j, k}$ comes from the matrix $B$.\n",
+    "\n",
     "As a first step, we want to code two functions $transformA()$ and $transformB()$ to obtain the two representations of $A$ and $B$ respectively, as described in Equation (2) and (3).\n",
     "The two representations returned by both functions **must be RDDs**.\n",
-    "</font>\n",
-    "</p>\n",
     "\n",
-    "\n",
-    "<p align=\"justify\">\n",
-    "<hr style=\" border:none; height:2px;\">\n",
-    " <font  size=\"3\" color='#91053d'>**Complete the definition of the functions $transformA()$ and $transformB()$ and execute the code**</font>\n",
-    "<hr style=\" border:none; height:2px;\">\n",
-    "</p>\n",
-    "\n"
+    "**Complete the definition of the functions $transformA()$ and $transformB()$ and execute the code**"
    ]
   },
   {
