--- a/src/lab4/src/notebooks/spark-PageRank.ipynb
+++ b/src/lab4/src/notebooks/spark-PageRank.ipynb
@@ -523,24 +523,24 @@
     "'''\n",
     "def transformB(B):\n",
     "    # Transform B as indicated in the text above\n",
-    "    B = \n",
+    "    # B = \n",
     "    return B\n",
     "\n",
     "################## END MODIFICATIONS ##################\n",
     "\n",
     "# Displayes the two matrices\n",
     "nice(\"A\", A)\n",
-    "nice(\"B\", B)\n",
+    "# nice(\"B\", B)\n",
     "\n",
     "# Transforms them\n",
     "Atransformed = transformA(A)\n",
-    "Btransformed = transformB(B)\n",
+    "# Btransformed = transformB(B)\n",
     "\n",
     "# Display the result.\n",
     "print(\"\\n********** Representation for A ************\\n\")\n",
     "print(Atransformed.collect())\n",
-    "print(\"\\n********** Representation for B ************\\n\")\n",
-    "print(Btransformed.collect())\n"
+    "# print(\"\\n********** Representation for B ************\\n\")\n",
+    "# print(Btransformed.collect())\n"
    ]
   },
   {
