--- a/src/lab4/src/notebooks/spark-PageRank.ipynb
+++ b/src/lab4/src/notebooks/spark-PageRank.ipynb
@@ -515,7 +515,7 @@
     "def transformA(A):\n",
     "\n",
     "    # Transform A as indicated in the text above\n",
-    "    A = \n",
+    "    A = A.map(lambda x: (x[1], (0, x[0], x[2])))\n",
     "    return A\n",
     "\n",
     "'''\n",
