--- a/src/lab4/src/notebooks/spark-PageRank.ipynb
+++ b/src/lab4/src/notebooks/spark-PageRank.ipynb
@@ -405,6 +405,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[((0, 0), 1.0),\n",
+       " ((0, 1), 2.0),\n",
+       " ((0, 2), 4.0),\n",
+       " ((1, 0), 2.0),\n",
+       " ((1, 1), 3.0),\n",
+       " ((1, 2), 10.0),\n",
+       " ((2, 0), 12.0),\n",
+       " ((2, 1), 15.0),\n",
+       " ((2, 2), 150.0)]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [
